Final responsive fix and disable zoom on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,13 +29,16 @@
     justify-content: center;
 }
 
-/* On screens that are 992px wide or less, go from four columns to two columns */
+/* < 600 pixels disable gridding and zoom */
 @media screen and (max-width: 600px) {
     .row {
       flex-direction: column;
     }
     .zoom {
         margin-bottom: 30px;
+    }
+    .zoom:hover {
+        transform: scale(1); /* disable zoom */
     }
 }
 
@@ -64,7 +67,7 @@ h3 {
 }
   
 .zoom:hover {
-    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.2); /* (120% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .link-container {
